--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -1,3 +1,12 @@
 <h1>Sign Up Below:</h1>
+<form method="POST" action="/registrations">
+<label for="name">Name:</label><br>
+<input id="name" type="text" name="name"><br>
+<label for="email">Email:</label><br>
+<input id ="email" type="text" name="email"><br>
+<label for="password">Password:</label><br>
+<input id="password" type="password" name="password"><br>
+<input id="Sign Up" type="submit">
+</form>
 
 
